feat(entity): one entity bulk endpoint for creation and deletion
